--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | form</title>
+    <title>Unity Web Player | web2d</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background: #231F20"></canvas>
-    <script src="Build/mindpixel-website-unity6.loader.js"></script>
+    <script src="Build/2d-web build.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -26,13 +26,13 @@
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
         arguments: [],
-        dataUrl: "Build/mindpixel-website-unity6.data",
-        frameworkUrl: "Build/mindpixel-website-unity6.framework.js",
-        codeUrl: "Build/mindpixel-website-unity6.wasm",
+        dataUrl: "Build/2d-web build.data.br",
+        frameworkUrl: "Build/2d-web build.framework.js.br",
+        codeUrl: "Build/2d-web build.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "form",
-        productVersion: "0.1",
+        productName: "web2d",
+        productVersion: "1.0",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
